--- a/public/plugins/bootstrap/css/bootstrap.css
+++ b/public/plugins/bootstrap/css/bootstrap.css
@@ -2945,7 +2945,7 @@ fieldset[disabled] a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #36c6d3;
+  background-color: #97084f;
   border-color: #2bb8c4; }
   .btn-success:focus,
   .btn-success.focus {
@@ -2987,10 +2987,10 @@ fieldset[disabled] a.btn {
   fieldset[disabled] .btn-success:hover,
   fieldset[disabled] .btn-success:focus,
   fieldset[disabled] .btn-success.focus {
-    background-color: #36c6d3;
+    background-color: #97084f;
     border-color: #2bb8c4; }
   .btn-success .badge {
-    color: #36c6d3;
+    color: #97084f;
     background-color: #fff; }
 
 .btn-info {
@@ -4624,7 +4624,7 @@ a.thumbnail.active {
   animation: progress-bar-stripes 2s linear infinite; }
 
 .progress-bar-success {
-  background-color: #36c6d3; }
+  background-color: #97084f; }
   .progress-striped .progress-bar-success {
     background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
     background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
