--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,9 +1,7 @@
 div.page-logo {overflow: visible;}
 img.logo-default {
-    max-height: 150px;
-    height: 100px;
 }
-.create{background-color:#36c6d3}
+.create{background-color:#97084f}
 .truncate-txhash, .truncate-addrhash{
     white-space:nowrap; 
     overflow:hidden;
