Logo/CSS Updates - ethoFS Migration

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,12 @@
         <link href="/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
         <link href="/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
          
-        <link href="https://ether1.org/css/calendar.css" rel="stylesheet">
-        <link href="https://ether1.org/css/font-awesome.css" rel="stylesheet">
-        <link href="https://ether1.org/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://files.ether1.org/css/calendar.css" rel="stylesheet">
+        <link href="https://files.ether1.org/css/font-awesome.css" rel="stylesheet">
+        <link href="https://files.ether1.org/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap theme -->
-        <link href="https://ether1.org/css/bootstrap-theme.min.css" rel="stylesheet">
-        <link href="https://ether1.org/css/style.css" rel="stylesheet">
+        <link href="https://files.ether1.org/css/bootstrap-theme.min.css" rel="stylesheet">
+        <link href="https://files.ether1.org/css/style.css" rel="stylesheet">
 
 
 
